code/tui/snapshots/fullscreen/mode/fullscreen_detail_is_not_replaced_by_inline_detail.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
  ┌── Fullscreen detail ───────────────────[✗]─┐  
  │                                            │  
  │  Text: full detail                         │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  └────────────────────────────────────────────┘  
  ───────────────────────────── Automatic model   
                                                  
  ↑/↓ scroll  ·  Esc to close
