code/tui/snapshots/fullscreen/mode/fullscreen_home_after_inline_navigation.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
  ╭────────────────────────────────────────────╮  
  │                                            │  
  │  Ash Code v0.1.0                           │  
  │  New worktree                              │  
  │  Resume session                            │  
  │  Settings                                  │  
  │  Help and shortcuts                        │  
  ╰────────────────────────────────────────────╯  
      Type a new task · Tab actions · Esc return  
  ──────────────────────────────────────────────  
  >                                               
  ───────────────────────────── Automatic model   
  ⏸ Manual                                        
  Enter send  ·  Tab actions  ·  / commands
