code/tui/snapshots/fullscreen/mode/fullscreen_manager_own_selection.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
─ Dashboard ─────────────────── Group: Status  g ─
                                                  
  Idle (2) -                                      
  ○ first session                                 
> ○ second session                                
                                                  
  Archived (0)                                    
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  Enter to open · Esc to return
