code/tui/snapshots/fullscreen/mode/fullscreen_preview_receives_own_reply.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
fullscreen preview failed                         
  Preview · first session · read only             
  Esc to close
