code/tui/snapshots/fullscreen/mode/home_draft_is_separate_from_current_conversation.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ──────────────────────────────────────────────  
  > new task draft                                
  ───────────────────────────── Automatic model   
  ⏸ Manual                                        
  Enter send  ·  / commands
